force-app/main/default/objects/Income_Direct_Debit__c/Income_Direct_Debit__c.object-meta.xml
<CustomObject>
    <label>Direct Debit Detail</label>
    <nameField>
        <displayFormat>DD{00000000}</displayFormat>
        <label>AUDDIS Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Debit Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>