force-app/main/default/objects/Income_Direct_Debit__c/fields/Basket__c.field-meta.xml
<CustomField>
    <fullName>Basket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Basket</label>
    <referenceTo>Basket__c</referenceTo>
    <relationshipLabel>Direct Debit Details</relationshipLabel>
    <relationshipName>Direct_Debit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>