force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>DD_Account_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>