force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Account_Holder_LastName__c.field-meta.xml
<CustomField>
    <fullName>DD_Account_Holder_LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>