force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Account_Number_OK__c.field-meta.xml
<CustomField>
    <fullName>DD_Account_Number_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Number OK</label>
    <type>Checkbox</type>
</CustomField>