force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Account_State__c.field-meta.xml
<CustomField>
    <fullName>DD_Account_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>