force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>DD_Bank_Account_Name__c</fullName>
    <label>Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>