force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DD_Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>