force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>DD_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>