force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Bank_Postcode__c.field-meta.xml
<CustomField>
    <fullName>DD_Bank_Postcode__c</fullName>
    <label>DD Bank Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>