force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Bank_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>DD_Bank_Sort_Code__c</fullName>
    <label>Bank Sort Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>