force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>DD_Branch_Name__c</fullName>
    <label>Branch Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>