force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Collection_Day__c.field-meta.xml
<CustomField>
    <fullName>DD_Collection_Day__c</fullName>
    <label>Collection Day</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DD_Collection_Period__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>