force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Collection_Reference__c.field-meta.xml
<CustomField>
    <fullName>DD_Collection_Reference__c</fullName>
    <defaultValue>&quot;Donation&quot;</defaultValue>
    <label>Collection Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>