force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Collection_Stretch__c.field-meta.xml
<CustomField>
    <fullName>DD_Collection_Stretch__c</fullName>
    <label>Collection Stretch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>