force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>DD_Collection_Type__c</fullName>
    <inlineHelpText>Fixed Collection type will not be collected after the End Date</inlineHelpText>
    <label>Collection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>One Off</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>