force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Count_Of_Failed_Collections__c.field-meta.xml
<CustomField>
    <fullName>DD_Count_Of_Failed_Collections__c</fullName>
    <label>DD Count Of Failed Collections</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>