force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_End_Date__c</fullName>
    <inlineHelpText>DDs Will not be collected after this date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>