force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Final_Collection_Amount__c.field-meta.xml
<CustomField>
    <fullName>DD_Final_Collection_Amount__c</fullName>
    <label>Final Collection Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>