force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_First_Collection_Amount__c.field-meta.xml
<CustomField>
    <fullName>DD_First_Collection_Amount__c</fullName>
    <label>First Collection Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>