force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_First_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_First_Collection_Date__c</fullName>
    <inlineHelpText>This is set by the DD collection engine</inlineHelpText>
    <label>First Collection Date</label>
    <type>Date</type>
</CustomField>