force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>DD_Hold_Reason__c</fullName>
    <label>DD Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>