force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Last_Collected_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Last_Collected_Date__c</fullName>
    <inlineHelpText>This is populated by the DD Engine</inlineHelpText>
    <label>Last Collected Date</label>
    <type>Date</type>
</CustomField>