force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Last_Collection_Failed__c.field-meta.xml
<CustomField>
    <fullName>DD_Last_Collection_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is Read only and set my the DD Engine</description>
    <inlineHelpText>This is Read only and set my the DD Engine</inlineHelpText>
    <label>Last Collection Failed</label>
    <type>Checkbox</type>
</CustomField>