force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Next_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Next_Collection_Date__c</fullName>
    <inlineHelpText>This is set by the DD Collection Engine</inlineHelpText>
    <label>Next Collection Date</label>
    <type>Date</type>
</CustomField>