force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Plan__c.field-meta.xml
<CustomField>
    <fullName>DD_Plan__c</fullName>
    <label>DD Plan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>