force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Single_Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>DD_Single_Account_Holder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DD Single Account Holder</label>
    <type>Checkbox</type>
</CustomField>