force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Sort_Code_OK__c.field-meta.xml
<CustomField>
    <fullName>DD_Sort_Code_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sort Code OK</label>
    <type>Checkbox</type>
</CustomField>