force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Start_Date__c</fullName>
    <inlineHelpText>DDs will not be collected before this date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>