force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Status__c.field-meta.xml
<CustomField>
    <fullName>DD_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Instruction</fullName>
                <default>true</default>
                <label>New Instruction</label>
            </value>
            <value>
                <fullName>First Collection</fullName>
            </value>
            <value>
                <fullName>Ongoing Collection</fullName>
            </value>
            <value>
                <fullName>Final Collection</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>First Represent</fullName>
            </value>
            <value>
                <fullName>Second Represent</fullName>
            </value>
            <value>
                <fullName>Third Represent</fullName>
            </value>
            <value>
                <fullName>Cancelled by Payer</fullName>
            </value>
            <value>
                <fullName>Cancelled by Originator</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>