force-app/main/default/objects/Income_Direct_Debit__c/fields/DD_Total_Amount_Debited__c.field-meta.xml
<CustomField>
    <fullName>DD_Total_Amount_Debited__c</fullName>
    <label>Total Amount Debited</label>
    <summarizedField>Income_Debit_History__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Income_Debit_History__c.DD_Stage__c</field>
        <operation>equals</operation>
        <value>Submitted, Successful</value>
    </summaryFilterItems>
    <summaryForeignKey>Income_Debit_History__c.Income_Direct_Debit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>