force-app/main/default/objects/Income_Direct_Debit__c/fields/Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failed_Reason__c</fullName>
    <inlineHelpText>Callout Failed Reason</inlineHelpText>
    <label>Failed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>