force-app/main/default/objects/Income_Direct_Debit__c/fields/Last_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_Date__c</fullName>
    <label>Last Processed Date</label>
    <summarizedField>Income_Debit_History__c.CreatedDate</summarizedField>
    <summaryForeignKey>Income_Debit_History__c.Income_Direct_Debit__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>