force-app/main/default/objects/Income_Direct_Debit__c/fields/Recurring_Donation__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Donation</label>
    <referenceTo>npe03__Recurring_Donation__c</referenceTo>
    <relationshipLabel>Direct Debit Details</relationshipLabel>
    <relationshipName>Direct_Debit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>