force-app/main/default/objects/Income_Direct_Debit__c/validationRules/Account_Number_Length_8_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_Length_8_digits</fullName>
    <active>true</active>
    <description>Check that the Account Number entered is 8 digits in length</description>
    <errorConditionFormula>(NOT(ISNUMBER(DD_Bank_Account_Number__c )))   ||  NOT( REGEX( DD_Bank_Account_Number__c , &quot;\\d{8}&quot;))</errorConditionFormula>
    <errorMessage>Account Number must contain 8 digits</errorMessage>
</ValidationRule>