force-app/main/default/objects/Income_Direct_Debit__c/validationRules/Must_be_New_Instruction.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_be_New_Instruction</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISNEW(), NOT(  ISPICKVAL( DD_Status__c , &apos;New Instruction&apos;))  )</errorConditionFormula>
    <errorDisplayField>DD_Status__c</errorDisplayField>
    <errorMessage>All New DD must start as New Instruction</errorMessage>
</ValidationRule>