force-app/main/default/objects/Income_Direct_Debit__c/validationRules/must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>must_be_set</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT( DD_Collection_Day__c ))</errorConditionFormula>
    <errorDisplayField>DD_Collection_Day__c</errorDisplayField>
    <errorMessage>Must select a Collection date</errorMessage>
</ValidationRule>