force-app/main/default/objects/Income_Direct_Debit__c/listViews/All_Collections.listView-meta.xml
<ListView>
    <fullName>All_Collections</fullName>
    <columns>NAME</columns>
    <columns>DD_Status__c</columns>
    <columns>DD_Collection_Day__c</columns>
    <columns>DD_First_Collection_Amount__c</columns>
    <columns>DD_Ongoing_Collection_Amount__c</columns>
    <columns>DD_Next_Collection_Date__c</columns>
    <columns>DD_First_Collection_Date__c</columns>
    <columns>DD_Bank_Account_Number__c</columns>
    <columns>DD_Bank_Sort_Code__c</columns>
    <columns>DD_Account_Number_OK__c</columns>
    <columns>DD_Sort_Code_OK__c</columns>
    <columns>DD_OK__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DD_Status__c</field>
        <operation>equals</operation>
        <value>First Collection,Ongoing Collection,Final Collection,First Represent</value>
    </filters>
    <label>All Collections</label>
</ListView>