force-app/main/default/objects/Income_Direct_Debit__c/listViews/All_New_Instructions.listView-meta.xml
<ListView>
    <fullName>All_New_Instructions</fullName>
    <columns>NAME</columns>
    <columns>DD_Status__c</columns>
    <columns>DD_Collection_Day__c</columns>
    <columns>DD_First_Collection_Amount__c</columns>
    <columns>DD_Ongoing_Collection_Amount__c</columns>
    <columns>DD_Next_Collection_Date__c</columns>
    <columns>DD_First_Collection_Date__c</columns>
    <columns>DD_Bank_Account_Number__c</columns>
    <columns>DD_Bank_Sort_Code__c</columns>
    <columns>DD_Account_Number_OK__c</columns>
    <columns>DD_Sort_Code_OK__c</columns>
    <columns>DD_OK__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DD_Status__c</field>
        <operation>equals</operation>
        <value>New Instruction</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>All New Instructions</label>
</ListView>